--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,25 +1,36 @@
 <header class="header" id="header">
     <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
-    <div class="header_img"> <img src="https://i.imgur.com/hczKIze.jpg" alt=""> </div>
 </header>
 <div class="l-navbar" id="nav-bar">
     <nav class="nav">
-        <div> <a href="#" class="nav_logo"> <i class='bx bxs-calendar nav_logo-icon'></i> <span
+        <div> <a class="nav_logo" routerLink="/"> <i class='bx bxs-calendar nav_logo-icon'></i> <span
                     class="nav_logo-name">AgendaApp</span> </a>
 
             <div class="nav_list">
-                <a href="#" class="nav_link active"> <i class='bx bx-folder-plus nav_icon'></i><span
-                        class="nav_name">Proyectos</span> </a>
-                <a href="#" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span
-                        class="nav_name">Usuarios</span></a>
-                <a href="#" class="nav_link"> <i class='bx bx-task nav_icon'></i> <span
-                        class="nav_name">Actividades</span> </a>
-                <a href="#" class="nav_link"> <i class='bx bx-list-ul nav_icon'></i> <span
-                        class="nav_name">Categorias</span> </a>
+                <a class="nav_link" routerLink="listProyecto" routerLinkActive="active">
+                    <i class='bx bx-folder-plus nav_icon'></i>
+                    <span class="nav_name">Proyectos</span>
+                </a>
+                <a class="nav_link" routerLink="listUser" routerLinkActive="active">
+                    <i class='bx bx-user nav_icon'></i>
+                    <span class="nav_name">Usuarios</span>
+                </a>
+                <a class="nav_link" routerLink="listActividad" routerLinkActive="active">
+                    <i class='bx bx-task nav_icon'></i>
+                    <span class="nav_name">Actividades</span>
+                </a>
+                <a class="nav_link" routerLink="listCategoria" routerLinkActive="active">
+                    <i class='bx bx-list-ul nav_icon'></i>
+                    <span class="nav_name">Categorias</span>
+                </a>
             </div>
         </div>
-        <a href="#" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span
-                class="nav_name">Cerrar sesion</span> </a>
+        <a class="nav_link" routerLink="singout">
+            <i class='bx bx-log-out nav_icon'></i>
+            <span class="nav_name">Cerrar sesion</span>
+        </a>
     </nav>
 </div>
-
+<div class="container-fluid bg-light">
+    <router-outlet></router-outlet>
+</div>
