CRUD categorias funcional

--- a/frontend/src/app/usuario/list-usuario/list-usuario.component.html
+++ b/frontend/src/app/usuario/list-usuario/list-usuario.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid py-2 bg-secondary">
     <div class="row">
         <div class="col-3">
-            <a class="btn btn-primary btn-block" (click)="addUser()">
+            <a class="btn btn-primary btn-block" (click)="add()">
                 <i class="fas fa-user-plus"></i> Agregar usuario
             </a>
         </div>
