--- a/frontend/src/app/categoria/edit-categoria/edit-categoria.component.html
+++ b/frontend/src/app/categoria/edit-categoria/edit-categoria.component.html
@@ -1,1 +1,33 @@
-<p>edit-categoria works!</p>
+<div class="container-fluid py-2 bg-secondary">
+    <div class="row">
+        <div class="col-3">
+            <a class="btn btn-primary btn-block" (click)="backList()">
+                <i class="fas fa-long-arrow-left"></i> Regresar al listado
+            </a>
+        </div>
+    </div>
+</div>
+<div class="container mt-2 col-md-4">
+    <div class="row">
+        <div class="col">
+            <div class="card my-4">
+                <div class="card-header">
+                    <h3>Agregar categoria</h3>
+                </div>
+                <div class="card-body">
+                    <form (ngSubmit)="onSubmit()" #categoriaForm="ngForm">
+                        <div class="form-group">
+                            <label for="name">Nombre:</label>
+                            <input [(ngModel)]="categoria.nombre" type="text" class="form-control" name="name" required
+                                #nombre="ngModel">
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-success mt-2"
+                                [disabled]="!categoriaForm.form.valid">Actualizar categoria</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
