--- a/frontend/src/app/categoria/list-categoria/list-categoria.component.html
+++ b/frontend/src/app/categoria/list-categoria/list-categoria.component.html
@@ -1,1 +1,43 @@
-<p>list-categoria works!</p>
+<div class="container-fluid py-2 bg-secondary">
+    <div class="row">
+        <div class="col-3">
+            <a class="btn btn-primary btn-block" (click)="add()">
+                <i class="fas fa-plus"></i> Agregar categoria
+            </a>
+        </div>
+    </div>
+</div>
+<div class="container-fluid col-md-6">
+    <div class="row">
+        <div class="col">
+            <div class="card my-4">
+                <div class="card-header">
+                    <h4>Listado de categorias</h4>
+                </div>
+                <div class="card-body">
+                    <table class="table table-hover table-sm" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Nombre</th>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let c of categorias; let i = index">
+                                <td>{{i+1}}</td>
+                                <td>{{c.nombre}}</td>
+                                <td>
+                                    <button (click)="editar(c)" class="btn btn-warning">
+                                        <i class="fas fa-edit"></i> Editar
+                                    </button>&nbsp;
+                                    <button (click)="delete(c)" class="btn btn-danger">
+                                        <i class="fas fa-trash-alt"></i> Eliminar
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
