--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,36 +1,42 @@
-<header class="header" id="header">
-    <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
-</header>
-<div class="l-navbar" id="nav-bar">
-    <nav class="nav">
-        <div> <a class="nav_logo" routerLink="/"> <i class='bx bxs-calendar nav_logo-icon'></i> <span
-                    class="nav_logo-name">AgendaApp</span> </a>
-
-            <div class="nav_list">
-                <a class="nav_link" routerLink="listProyecto" routerLinkActive="active">
-                    <i class='bx bx-folder-plus nav_icon'></i>
-                    <span class="nav_name">Proyectos</span>
-                </a>
-                <a class="nav_link" routerLink="listUser" routerLinkActive="active">
-                    <i class='bx bx-user nav_icon'></i>
-                    <span class="nav_name">Usuarios</span>
-                </a>
-                <a class="nav_link" routerLink="listActividad" routerLinkActive="active">
-                    <i class='bx bx-task nav_icon'></i>
-                    <span class="nav_name">Actividades</span>
-                </a>
-                <a class="nav_link" routerLink="listCategoria" routerLinkActive="active">
-                    <i class='bx bx-list-ul nav_icon'></i>
-                    <span class="nav_name">Categorias</span>
-                </a>
-            </div>
-        </div>
-        <a class="nav_link" routerLink="singout">
-            <i class='bx bx-log-out nav_icon'></i>
-            <span class="nav_name">Cerrar sesion</span>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a routerLink="localhost:4200" class="navbar-brand">
+            <i class="bx bxs-calendar"></i>
+            AgendaApp
         </a>
-    </nav>
-</div>
-<div class="container-fluid bg-light">
-    <router-outlet></router-outlet>
-</div>
+        <div *ngIf="sessionStorage.getItem('user')" class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="listProyecto">Proyectos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="listActividad">Actividades</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="listCategoria">Categorias</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="listPlugin">Plugins</a>
+                </li>
+            </ul>
+            <form class="d-flex me-4">
+                <input class="form-control me-2" type="text" placeholder="...   ">
+                <button class="btn btn-primary" type="button">Buscar</button>
+            </form>
+            <ul class="navbar-nav">
+                <div class="dropdown">
+                    <li class="nav-item">
+                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+                            @username
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" routerLink (click)="editar(sessionStorage.getItem('user')??'')">Mi perfil</a></li>
+                            <li><a class="dropdown-item" routerLink >Cerrar sesion</a></li>
+                        </ul>
+                    </li>
+                </div>
+            </ul>
+        </div>
+    </div>
+</nav>
+<router-outlet></router-outlet>
