--- a/frontend/src/app/usuario/login/login.component.html
+++ b/frontend/src/app/usuario/login/login.component.html
@@ -18,7 +18,7 @@
                 </form>
                 <hr class="mt-4">
                 <div class="col-12">
-                    <p class="text-center mb-0">No tienes una cuenta? <a routerLink="addUser" (click)="registrar()">Registrate!</a></p>
+                    <p class="text-center mb-0">No tienes una cuenta? <a routerLink="register" (click)="registrar()">Registrate!</a></p>
                 </div>
             </div>
         </div>
