Consumo de api calendario lunar

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
-        <a href="" class="navbar-brand">
+        <a routerLink="calendar-dia" class="navbar-brand">
             <i class="bx bxs-calendar"></i>
             AgendaApp
         </a>
