--- a/frontend/src/app/usuario/add-usuario/add-usuario.component.html
+++ b/frontend/src/app/usuario/add-usuario/add-usuario.component.html
@@ -67,8 +67,7 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-success mt-2" [disabled]="!userForm.form.valid">Guardar
-                        usuario</button>
+                    <button type="submit" class="btn btn-success mt-2" [disabled]="!userForm.form.valid">Registrarme!</button>
                 </div>
             </form>
         </div>
