--- a/frontend/src/app/usuario/login/login.component.html
+++ b/frontend/src/app/usuario/login/login.component.html
@@ -1,3 +1,4 @@
+<div id="bg">
 <div class="container">
     <div class="row">
         <div class="col-md-4 offset-md-4">
@@ -23,4 +24,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
