--- a/frontend/src/app/actividad/list-actividad/list-actividad.component.html
+++ b/frontend/src/app/actividad/list-actividad/list-actividad.component.html
@@ -1,7 +1,10 @@
 <div class="container-fluid py-2 bg-secondary">
     <div class="row">
         <div class="col-3">
-            <a class="btn btn-primary btn-block" (click)="add()">
+            <a class="btn btn-secondary" (click)="back()">
+                <i class="fas fa-arrow-alt-left"></i> Regregar a proyectos
+            </a>&nbsp;
+            <a class="btn btn-primary" (click)="add()">
                 <i class="fas fa-plus"></i> Agregar actividad
             </a>
         </div>
