--- a/frontend/src/app/usuario/login/login.component.html
+++ b/frontend/src/app/usuario/login/login.component.html
@@ -26,3 +26,24 @@
     </div>
 </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="modalInfo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Aviso!</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <h5>{{textInfo}}</h5>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+<!-- Button trigger modal -->
+<button id="btnModalInfo" [hidden]="true" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalInfo"></button>
