Se agrego fase lunar a calendario

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -38,6 +38,6 @@
 </nav>
 
 <!-- Calendario -->
-<app-calendar></app-calendar>
+<!-- <app-calendar></app-calendar> -->
 
 <router-outlet></router-outlet>
