calendario agregado a pantalla de inicio

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
-        <a routerLink="calendar-dia" class="navbar-brand">
+        <a routerLink="calendar-mes" class="navbar-brand">
             <i class="bx bxs-calendar"></i>
             AgendaApp
         </a>
@@ -36,8 +36,5 @@
         </div>
     </div>
 </nav>
-
-<!-- Calendario -->
-<!-- <app-calendar></app-calendar> -->
 
 <router-outlet></router-outlet>
