--- a/frontend/src/app/proyecto/add-proyecto/add-proyecto.component.html
+++ b/frontend/src/app/proyecto/add-proyecto/add-proyecto.component.html
@@ -51,9 +51,9 @@
                         <div class="row py-2">
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="desc">Descripcion:</label>
+                                    <label for="desc">*Descripcion:</label>
                                     <textarea [(ngModel)]="proyecto.descripcion" class="form-control" name="descripcion"
-                                        rows="3"></textarea>
+                                        rows="3" #descripcion="ngModel" required></textarea>
                                 </div>
                             </div>
                         </div>
