Empezando modal calendario

--- a/frontend/src/app/calendar/calendar.component.html
+++ b/frontend/src/app/calendar/calendar.component.html
@@ -59,3 +59,9 @@
 		</div>
 	</div>
 </div>
+
+<app-modal-calendario></app-modal-calendario>
+
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalActividad">
+	Agregar evento
+</button>
