Script SQL actualizado

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -28,6 +28,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" routerLink (click)="editar(localStorage.getItem('user')??'')">Mi perfil</a></li>
+                            <li><a routerLink (click)="solicitar()">Solicitar ser editor</a></li>
                             <li><a class="dropdown-item" routerLink  (click)="logOut()">Cerrar sesion</a></li>
                         </ul>
                     </li>
