Funcinal para que el usuario solicite ser editor
1. Clases en backend creadas para la solicitud: modelo, repository, service
2. Metodos addSolicitud y newEditor agregados a UsuarioController
3. Tabla SolicitudRolEditor agregada al script SQL

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -27,9 +27,9 @@
                             {{'@'+localStorage.getItem('user')}}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" routerLink (click)="editar(localStorage.getItem('user')??'')">Mi perfil</a></li>
-                            <li><a routerLink (click)="solicitar()">Solicitar ser editor</a></li>
-                            <li><a class="dropdown-item" routerLink  (click)="logOut()">Cerrar sesion</a></li>
+                            <li><a class="dropdown-item" routerLink (click)="editar()">Mi perfil</a></li>
+                            <li *ngIf="isNotEditor" ><a class="dropdown-item" routerLink (click)="solicitar()">Solicitar ser editor</a></li>
+                            <li><a class="dropdown-item" routerLink (click)="logOut()">Cerrar sesion</a></li>
                         </ul>
                     </li>
                 </div>
