--- a/frontend/src/app/usuario/solicitud-editor/solicitud-editor.component.html
+++ b/frontend/src/app/usuario/solicitud-editor/solicitud-editor.component.html
@@ -1,1 +1,30 @@
-<p>solicitud-editor works!</p>
+<div class="container mt-2 col-md-4">
+    <div class="row">
+        <div class="col">
+            <div class="card my-4">
+                <div class="card-header text-center">
+                    <h3>Solicitar ser editor</h3>
+                </div>
+                <div class="card-body">
+                    <form (ngSubmit)="onSubmit()" #solicitudForm="ngForm">
+                        <div class="row py-2">
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label for="desc">Escriba la razón por la que desea ser editor:</label>
+                                    <textarea [(ngModel)]="solicitud.contenido" class="form-control" name="descripcion"
+                                        rows="3" required></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-success mt-2"
+                                [disabled]="!solicitudForm.form.valid">Enviar solicitud</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<app-modal>{{textInfo}}</app-modal>
