componente prosemirror, y renderizado publicaciones

--- a/frontend/src/app/txt-edit/txt-edit.component.html
+++ b/frontend/src/app/txt-edit/txt-edit.component.html
@@ -1,6 +1,11 @@
 
 <!--form (ngSubmit)="onSubmit()"-->
-  
+
+<div class="input-group input-group-lg">
+  <span class="input-group-text" id="inputGroup-sizing-lg">Titulo</span>
+  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+</div>
+<br>
     <div class="NgxEditor__Wrapper">
         <ngx-editor-menu [editor]="editor"> </ngx-editor-menu>
         <ngx-editor
@@ -10,5 +15,12 @@
           [placeholder]="'Publicaciones...'"
         ></ngx-editor>
       </div>
-      <button (click)="onSave()">Submit</button>
+      
+      
+      
+      
+      <div class="container">
+
+        
+    </div>
     <!--/form-->
