Agregando vista y eliminacion de recordatorio

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,6 +10,9 @@
                     <a class="nav-link" routerLink="proyecto/list">Proyectos</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" routerLink="recordatorio/list">Recordatorios</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" routerLink="categoria/list">Categorias</a>
                 </li>
                 <li class="nav-item">
