Agregando registro actividad desde modal calendario

--- a/frontend/src/app/recordatorio/list-recordatorio/list-recordatorio.component.html
+++ b/frontend/src/app/recordatorio/list-recordatorio/list-recordatorio.component.html
@@ -3,14 +3,13 @@
         <div class="col">
             <div class="card my-4">
                 <div class="card-header">
-                    <h4>Listado de actividades</h4>
+                    <h4>Listado de recordatorios</h4>
                 </div>
                 <div class="card-body">
                     <table class="table table-hover table-sm" cellspacing="0" width="100%">
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>Recordatorio</th>
                                 <th>T&iacute;tulo</th>
                                 <th>Descripci&oacute;n</th>
                                 <th>Fecha y hora</th>
