--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -15,7 +15,7 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="recordatorio/list">Recordatorios</a>
                 </li>
-                <li *ngIf="isUser" class="nav-item"></li>
+                <li *ngIf="isUser" class="nav-item">
                     <a class="nav-link" routerLink="categoria/list">Categorias</a>
                 </li>
                 <li *ngIf="isEditor" class="nav-item">
